src/assets/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  background-color: var(--bg-primary);
  color: var(--text-primary);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  scrollbar-color: var(--utility-scrollbar);
}

body {
  margin: 0;
  display: flex;
  /* place-items: center; */
  min-width: 320px;
  min-height: 100vh;
}


a {
  font-weight: 500;
  color: var(--text-accent);
  text-decoration: none;
}

@media (hover: hover) and (pointer: fine) {
  a:hover {
    text-decoration: underline;
  }
}


a:active {
  opacity: 0.8;
}

a:focus {
  color: var(--interactive-label-accent-hover);
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button:focus,
button:focus-visible {
  box-shadow: 0 0 0 1px var(--interactive-border-secondary-hover);
  outline: 4px auto var(--interactive-border-secondary-hover);
  background-color: var(--interactive-bg-primary-hover);
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  cursor: pointer;
  transition: border-color 0.25s background-color 0.25s;
  background-color: var(--interactive-bg-primary-default);
  box-shadow: 0 0 0 1px var(--interactive-border-secondary-default);
}

@media (hover: hover) and (pointer: fine) {
  button:hover {
    background-color: var(--interactive-bg-primary-hover);
    box-shadow: 0 0 0 1px var(--interactive-border-secondary-hover);
  }
}

button:active {
  background-color: var(--interactive-bg-primary-press);
  box-shadow: 0 0 0 1px var(--interactive-border-secondary-press);
}

button:disabled {
  opacity: 0.5;
}

